--- a/mingw-w64-crt/lib32/msvcr100.def.in
+++ b/mingw-w64-crt/lib32/msvcr100.def.in
@@ -1756,9 +1756,9 @@ log10
 longjmp
 malloc
 mblen
-mbrlen
-mbrtowc
-mbsrtowcs
+; mbrlen ; replaced, CRT version does not conform to C95
+; mbrtowc ; replaced, CRT version does not conform to C95
+; mbsrtowcs ; replaced, CRT version does not conform to C95
 mbsrtowcs_s
 mbstowcs
 mbstowcs_s
@@ -1860,7 +1860,7 @@ vsprintf_s
 vswprintf_s
 vwprintf
 vwprintf_s
-wcrtomb
+; wcrtomb ; replaced, CRT version does not report invalid conversion state
 wcrtomb_s
 wcscat
 wcscat_s
@@ -1880,7 +1880,7 @@ wcsncpy_s
 wcsnlen
 wcspbrk
 wcsrchr
-wcsrtombs
+; wcsrtombs ; replaced, CRT version does not report invalid conversion state
 wcsrtombs_s
 wcsspn
 wcsstr
