--- a/mingw-w64-crt/lib64/msvcr100.def.in
+++ b/mingw-w64-crt/lib64/msvcr100.def.in
@@ -1712,9 +1712,9 @@ logf DATA
 longjmp
 malloc
 mblen
-mbrlen
-mbrtowc
-mbsrtowcs
+; mbrlen ; replaced, CRT version does not conform to C95
+; mbrtowc ; replaced, CRT version does not conform to C95
+; mbsrtowcs ; replaced, CRT version does not conform to C95
 mbsrtowcs_s
 mbstowcs
 mbstowcs_s
@@ -1822,7 +1822,7 @@ vsprintf_s
 vswprintf_s
 vwprintf
 vwprintf_s
-wcrtomb
+; wcrtomb ; replaced, CRT version does not report invalid conversion state
 wcrtomb_s
 wcscat
 wcscat_s
@@ -1842,7 +1842,7 @@ wcsncpy_s
 wcsnlen
 wcspbrk
 wcsrchr
-wcsrtombs
+; wcsrtombs ; replaced, CRT version does not report invalid conversion state
 wcsrtombs_s
 wcsspn
 wcsstr
