crt: Split testcases to a separate Makefile.am in the subdirectory
Currently, the global AM_CFLAGS used for building mingw-w64-crt
also applies when trying to build the tests. These flags force
a specific static CRT configuration, while the tests should
test the toolchain's default configuration.

By splitting the tests to a separate Makefile.am in the
subdirectory, the global AM_CFLAGS for building the runtime
files don't affect the testcases.

This fixes building the testcases for e.g. UCRT configurations.

The Makefile.am contents in the subdirectory an exact copy of the
previous snippet, with the "testcases/" prefix removed from paths,
and the "testcases_" prefix removed from variables.

Relevant parts of AM_CFLAGS/AM_CXXFLAGS are retained.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -4402,89 +4402,7 @@ DISTCHECK_CONFIGURE_FLAGS = --host=$(host_triplet) $(withsys)
 dist-hook:
 	find $(top_distdir) -name ".svn" -delete
 
-# Testsuite options
-#
-
-#old
-#  testcases/tstwassert_win \
-#  testcases/tstwinmain \
-#  testcases/tstwassert \
-#  testcases_tstwinmain_LDADD = -lgdi32
-
-testcase_progs = \
-  testcases/tstmainc \
-  testcases/tstmaincpp \
-  testcases/tstmain_sys_xxx \
-  testcases/t__fstat_all \
-  testcases/t__stat_all \
-  testcases/t_aligned_alloc \
-  testcases/t_ansi_io \
-  testcases/t_btowc \
-  testcases/t_findfirst \
-  testcases/t_float  \
-  testcases/t_fstat \
-  testcases/t_intrinc \
-  testcases/t_imagebase \
-  testcases/t_lfs \
-  testcases/t_matherr \
-  testcases/t_mbrlen \
-  testcases/t_mbrtowc \
-  testcases/t_mbsrtowcs \
-  testcases/t_nullptrexception \
-  testcases/t_readdir \
-  testcases/t_snprintf \
-  testcases/t_snprintf0 \
-  testcases/t_snprintf1 \
-  testcases/t_swprintf \
-  testcases/t_swprintf0 \
-  testcases/t_swprintf1 \
-  testcases/t_snwprintf \
-  testcases/t_snwprintf0 \
-  testcases/t_snwprintf1 \
-  testcases/t_stprintf_a \
-  testcases/t_stprintf_u \
-  testcases/t_stprintf0_a \
-  testcases/t_stprintf0_u \
-  testcases/t_stprintf1_a \
-  testcases/t_stprintf1_u \
-  testcases/t_setjmp \
-  testcases/t_sigv \
-  testcases/t_speed_powl \
-  testcases/t_stat \
-  testcases/t_stdint \
-  testcases/t_time \
-  testcases/t_tls1 \
-  testcases/t_trycatch \
-  testcases/t_stat_slash \
-  testcases/t_vsscanf \
-  testcases/t_wcrtomb \
-  testcases/t_wcsrtombs \
-  testcases/t_wctob \
-  testcases/t_wreaddir \
-  testcases/t_fseeko64
-
-testcases_tstmaincpp_SOURCES = testcases/tstmaincpp.cpp
-testcases_t_trycatch_SOURCES = testcases/t_trycatch.cpp
-testcases_t_intrinc_CFLAGS = -std=c99
-
-if ENABLE_TESTS_UNICODE
-  testcase_progs += testcases/t_municode testcases/t_tmain testcases/t__wstat_all
-  testcases_t_municode_CFLAGS = -municode
-  testcases_t_tmain_CFLAGS = -municode -D_UNICODE
-  testcases_t__wstat_all_CFLAGS = -municode
-endif
-
-# Do not specify TESTS = check_PROGRAMS, because some TESTS
-# may not be check_PROGRAMS.
-check_LIBRARIES =
-check_PROGRAMS = $(testcase_progs)
-TESTS = $(testcase_progs)
-XFAIL_TESTS = \
-  testcases/t_nullptrexception
-
-# Include the complex math testcase fragment.
-include testcases/complex/Makefile.am
-
+SUBDIRS = . testcases
 
 # Don't delete the implicit intermediate files after building.
 .PRECIOUS: lib32/lib%.a lib32/%.def lib64/lib%.a lib64/%.def libarm32/lib%.a libarm32/%.def libarm64/lib%.a libarm64/%.def
