--- a/mingw-w64-crt/configure.ac
+++ b/mingw-w64-crt/configure.ac
@@ -447,7 +447,7 @@ AC_SUBST(ADD_C_ONLY_WARNING_FLAGS)
 AC_SUBST(ADD_C_CXX_WARNING_FLAGS)
 AC_SUBST(ADD_CXX_ONLY_WARNING_FLAGS)
 
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([Makefile testcases/Makefile])
 AC_OUTPUT
 
 AC_MSG_NOTICE([])
