--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -342,7 +342,7 @@ jobs:
           sudo apt-get update && sudo apt-get install libgmp-dev libmpfr-dev libmpc-dev autoconf automake
       - name: Build binutils
         run: |
-          curl -LO https://ftp.gnu.org/gnu/binutils/binutils-2.42.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/binutils/binutils-2.42.tar.xz
           tar -Jxf binutils-*.tar.xz
           rm binutils-*.tar.xz
           cd binutils-*
@@ -354,7 +354,7 @@ jobs:
           echo $(pwd)/../../prefix/bin >> $GITHUB_PATH
       - name: Build the base GCC
         run: |
-          curl -LO https://ftp.gnu.org/gnu/gcc/gcc-14.1.0/gcc-14.1.0.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/gcc/gcc-14.1.0/gcc-14.1.0.tar.xz
           tar -Jxf gcc-*.tar.xz
           rm gcc-*.tar.xz
           cd gcc-*
@@ -434,7 +434,7 @@ jobs:
         run: |
           PREFIX=$(pwd)/prefix
 
-          curl -LO https://ftp.gnu.org/gnu/gmp/gmp-6.3.0.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/gmp/gmp-6.3.0.tar.xz
           tar -Jxf gmp-*.tar.xz
           rm gmp-*.tar.xz
           cd gmp-*
@@ -445,7 +445,7 @@ jobs:
           make install
           cd ../..
 
-          curl -LO https://ftp.gnu.org/gnu/mpfr/mpfr-4.2.1.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/mpfr/mpfr-4.2.1.tar.xz
           tar -Jxf mpfr-*.tar.xz
           rm mpfr-*.tar.xz
           cd mpfr-*
@@ -456,7 +456,7 @@ jobs:
           make install
           cd ../..
 
-          curl -LO https://ftp.gnu.org/gnu/mpc/mpc-1.3.1.tar.gz
+          curl -LO https://ftpmirror.gnu.org/gnu/mpc/mpc-1.3.1.tar.gz
           tar -zxf mpc-*.tar.gz
           rm mpc-*.tar.gz
           cd mpc-*
@@ -469,7 +469,7 @@ jobs:
 
       - name: Build binutils
         run: |
-          curl -LO https://ftp.gnu.org/gnu/binutils/binutils-2.42.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/binutils/binutils-2.42.tar.xz
           tar -Jxf binutils-*.tar.xz
           rm binutils-*.tar.xz
           cd binutils-*
@@ -481,7 +481,7 @@ jobs:
           echo $(pwd)/../../prefix/bin >> $GITHUB_PATH
       - name: Build GCC
         run: |
-          curl -LO https://ftp.gnu.org/gnu/gcc/gcc-14.1.0/gcc-14.1.0.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/gcc/gcc-14.1.0/gcc-14.1.0.tar.xz
           tar -Jxf gcc-*.tar.xz
           rm gcc-*.tar.xz
           cd gcc-*
