--- a/mingw-w64-crt/lib-common/api-ms-win-crt-private-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-private-l1-1-0.def.in
@@ -46,7 +46,9 @@ __dcrt_get_wide_environment_from_os
 __dcrt_initial_narrow_environment DATA
 F_I386(__intrinsic_abnormal_termination)
 F_NON_ARM64(__intrinsic_setjmp)
+F_NON_ARM64(_setjmp == __intrinsic_setjmp)
 F64(__intrinsic_setjmpex)
+F64(_setjmpex == __intrinsic_setjmpex)
 __processing_throw
 __report_gsfailure
 __std_exception_copy
