--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -758,7 +758,7 @@ _mkdir
 _mktemp
 _msize
 _nextafter
-; _onexit ; disable _onexit for compatibility with DLL builds, real _onexit function provided by mingw-w64
+; _onexit replaced by emu, CRT _onexit does not work for DLL builds
 _open
 _open_osfhandle
 _osver DATA
@@ -1795,7 +1795,7 @@ _wtol_l
 _wutime32 F_I386(== _wutime) ; i386 _wutime32 replaced by alias
 F_ARM_ANY(asctime_s) ; i386 and x64 asctime_s replaced by emu
 bsearch_s
-; F_ARM_ANY(btowc) ; replaced for consistency with wctob
+; btowc replaced by emu for consistency with wctob
 clearerr_s
 fopen_s
 fprintf_s
@@ -1804,10 +1804,10 @@ fscanf_s
 fwprintf_s
 fwscanf_s
 F_ARM_ANY(getenv_s) ; i386 and x64 getenv_s replaced by emu
-; F_ARM_ANY(mbrlen) ; replaced, CRT version does not conform to C95
-; F_ARM_ANY(mbrtowc) ; replaced, CRT version does not conform to C95
+; mbrlen replaced by emu, CRT version does not conform to C95
+; mbrtowc replaced by emu, CRT version does not conform to C95
 mbsdup_dbg
-; F_ARM_ANY(mbsrtowcs) ; replaced, CRT version does not conform to C95
+; mbsrtowcs replaced by emu, CRT version does not conform to C95
 mbsrtowcs_s
 mbstowcs_s
 F_ARM_ANY(memcpy_s) ; i386 and x64 memcpy_s replaced by emu
@@ -1838,18 +1838,18 @@ vprintf_s
 F_ARM_ANY(vsprintf_s) ; i386 and x64 vsprintf_s replaced by emu
 vswprintf_s
 vwprintf_s
-; F_ARM_ANY(wcrtomb) ; replaced, CRT version does not report invalid conversion state
+; wcrtomb replaced by emu, CRT version does not report invalid conversion state
 wcrtomb_s
 wcscat_s
 wcscpy_s
 wcsncat_s
 wcsncpy_s
 F_ARM_ANY(wcsnlen) ; i386 and x64 wcsnlen replaced by emu
-; F_ARM_ANY(wcsrtombs) ; replaced, CRT version does not report invalid conversion state
+; wcsrtombs replaced by emu, CRT version does not report invalid conversion state
 wcsrtombs_s
 F_ARM_ANY(wcstok_s) ; i386 and x64 wcstok_s replaced by emu
 wcstombs_s
-; F_ARM_ANY(wctob) ; replaced, CRT version may sign-extend its return value
+; wctob replaced by emu, CRT version may sign-extend its return value
 wctomb_s
 wprintf_s
 wscanf_s
